[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Fonts/Roboto/ROBOTO-REGULAR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Underline.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Italic.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Center.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Right.svg" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Code.svg" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Bold.svg" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Strikethrough.svg" type="Texture" id=8]
[ext_resource path="res://Scripts/TextTools_Button.gd" type="Script" id=9]
[ext_resource path="res://Scripts/TextTools.gd" type="Script" id=10]
[ext_resource path="res://Themes/testTheme.theme" type="Theme" id=11]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Exit.svg" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Clear.svg" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.960784, 0.882353 )
shadow_color = Color( 0, 0, 0, 0.0627451 )
shadow_size = 6

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=7]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxFlat" id=10]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxFlat" id=11]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=12]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=13]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=14]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=15]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=9]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=28]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[sub_resource type="StyleBoxFlat" id=27]
resource_local_to_scene = true
bg_color = Color( 0.784314, 0.784314, 0.803922, 0 )

[node name="TextTools_PanelContainer" type="PanelContainer"]
margin_left = 504.0
margin_top = 411.0
margin_right = 750.0
margin_bottom = 448.0
mouse_filter = 2
theme = ExtResource( 11 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 531.0
margin_bottom = 37.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 523.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Style_OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer"]
margin_right = 121.0
margin_bottom = 29.0
custom_styles/normal = SubResource( 2 )
custom_constants/hseparation = 8
custom_constants/arrow_margin = 0
text = "Default style"
expand_icon = true

[node name="Bold_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 157.0
margin_bottom = 29.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Bold_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 28.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 21 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Italic_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 165.0
margin_right = 194.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Italic_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Underline_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 231.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 11 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Underline_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 2 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strikethrough_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 239.0
margin_right = 268.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 12 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Strikethrough_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 8 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 276.0
margin_right = 305.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Code_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 6 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 342.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 14 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Center_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 4 )
flat = true
expand_icon = true
script = ExtResource( 9 )

[node name="Right_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 379.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 15 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Right_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 5 )
flat = true
expand_icon = true
script = ExtResource( 9 )

[node name="Color_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 441.0
margin_bottom = 29.0
rect_min_size = Vector2( 54, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Color_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 3.92865
margin_right = 48.9286
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
custom_fonts/font = SubResource( 5 )
text = "#fffff"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 449.0
margin_right = 478.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 28 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Clear_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
rect_pivot_offset = Vector2( 14.25, 15 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 13 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 515.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 27 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Exit_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 0.784314 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
icon = ExtResource( 12 )
flat = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
